# OpenGL-2D-project

./: .gitignore  CMakeLists.txt
resources/: objects.json  resources.json
resources/levels/: 1.json
resources/shaders/: default.frag  shadow.frag
source/: main.cpp
source/Engine/: Camera.h  Collision.h
source/Game/: Components.h  Game.h  GameHandler.h  GameObject.h  Hero.h  Map.h  ObjectsManager.cpp  ObjectsManager.h
source/Game/Components/: BehaviourComponent.cpp  BehaviourComponent.h  CameraComponent.cpp  CameraComponent.h  Component.h  HeroComponent.h  PhysicComponent.cpp  PhysicComponent.h  RenderComponent.cpp  RenderComponent.h  ShadowComponent.h  SpriteRendererComponent.cpp  SpriteRendererComponent.h  TransformComponent.cpp  TransformComponent.h
source/Game/Components/BehaviourComponents/: BehaviourComponent.h  CameraComponent.h
source/Managers/: ResourceManager.h  WindowManager.h
source/Renderer/: AnimatedSprite.h  Camera.h  IndexBuffer.h  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.h  SpriteAnimator.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
source/Resources/: ResourceManager.cpp  ResourceManager.h  WindowManager.h
source/System/: InputHandler.cpp  InputHandler.h  Parser.cpp  Parser.h  Time.h  Timer.h  Window.cpp  Window.h
